--- a/tfp.ipynb
+++ b/tfp.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "tfp.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiud36PpLVKF558a6mntPc",
+      "authorship_tag": "ABX9TyN2CSgwcnjmc1LPuQQDpwNV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,32 +31,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pmOQxW_c61XY",
-        "outputId": "ef87abfc-93ec-4c11-d776-83195026575a"
+        "outputId": "43f4b1c3-bd51-4268-e271-a825f8ce9c1c"
       },
       "source": [
         "% pip install shap\r\n",
         "import tensorflow as tf\r\n",
         "from tensorflow.keras import layers\r\n",
+        "import tensorflow_probability as tfp\r\n",
         "import shap\r\n",
         "import numpy as np\r\n",
         "from sklearn.datasets import make_regression\r\n",
         "from sklearn.preprocessing import KBinsDiscretizer\r\n",
         "from sklearn.model_selection import train_test_split"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: shap in /usr/local/lib/python3.6/dist-packages (0.38.1)\n",
-            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from shap) (0.22.2.post1)\n",
-            "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from shap) (1.1.5)\n",
-            "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.6/dist-packages (from shap) (1.3.0)\n",
-            "Requirement already satisfied: numba in /usr/local/lib/python3.6/dist-packages (from shap) (0.48.0)\n",
-            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from shap) (1.4.1)\n",
-            "Requirement already satisfied: tqdm>4.25.0 in /usr/local/lib/python3.6/dist-packages (from shap) (4.41.1)\n",
             "Requirement already satisfied: slicer==0.0.7 in /usr/local/lib/python3.6/dist-packages (from shap) (0.0.7)\n",
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (from shap) (0.22.2.post1)\n",
+            "Requirement already satisfied: cloudpickle in /usr/local/lib/python3.6/dist-packages (from shap) (1.3.0)\n",
+            "Requirement already satisfied: tqdm>4.25.0 in /usr/local/lib/python3.6/dist-packages (from shap) (4.41.1)\n",
+            "Requirement already satisfied: pandas in /usr/local/lib/python3.6/dist-packages (from shap) (1.1.5)\n",
+            "Requirement already satisfied: numba in /usr/local/lib/python3.6/dist-packages (from shap) (0.48.0)\n",
             "Requirement already satisfied: numpy in /usr/local/lib/python3.6/dist-packages (from shap) (1.19.5)\n",
+            "Requirement already satisfied: scipy in /usr/local/lib/python3.6/dist-packages (from shap) (1.4.1)\n",
             "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn->shap) (1.0.0)\n",
             "Requirement already satisfied: pytz>=2017.2 in /usr/local/lib/python3.6/dist-packages (from pandas->shap) (2018.9)\n",
             "Requirement already satisfied: python-dateutil>=2.7.3 in /usr/local/lib/python3.6/dist-packages (from pandas->shap) (2.8.1)\n",
@@ -71,41 +72,63 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "U20S9SGZRdrH"
+      },
+      "source": [
+        "N_BINS = 7\r\n",
+        "INPUT_SIZE = 15"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "G9gZFpM8AFm9",
-        "outputId": "0fe774c2-a940-4e36-ec32-e80b16281e57"
+        "outputId": "ce380675-548a-40b3-ffa7-19f991130922"
       },
       "source": [
         "X, y_c = make_regression(\r\n",
-        "    n_samples=1000,\r\n",
-        "    n_features=10,\r\n",
-        "    n_informative=4,\r\n",
+        "    n_samples=100000,\r\n",
+        "    n_features=INPUT_SIZE,\r\n",
+        "    n_informative=6,\r\n",
         ")\r\n",
         "\r\n",
-        "y = KBinsDiscretizer(\r\n",
-        "    n_bins=10,\r\n",
+        "\r\n",
+        "discretizer = KBinsDiscretizer(\r\n",
+        "    n_bins=N_BINS,\r\n",
         "    encode=\"onehot-dense\",\r\n",
         "    strategy=\"quantile\",\r\n",
-        ").fit_transform(y_c.reshape(-1, 1))\r\n",
+        ")\r\n",
+        "y = discretizer.fit_transform(y_c.reshape(-1, 1))\r\n",
         "\r\n",
-        "X_train, y_train, X_test, y_test = train_test_split(X, y, train_size=0.8)\r\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=5)\r\n",
+        "\r\n",
+        "X_train = tf.convert_to_tensor(X_train)\r\n",
+        "y_train = tf.convert_to_tensor(y_train)\r\n",
+        "X_test = tf.convert_to_tensor(X_test)\r\n",
+        "y_test = tf.convert_to_tensor(y_test)\r\n",
         "\r\n",
         "print(X_train.shape)\r\n",
         "print(y_train.shape)\r\n",
         "print(X_test.shape)\r\n",
-        "print(y_test.shape)"
+        "print(y_test.shape)\r\n",
+        "print(\"Bin edges \", discretizer.bin_edges_[0])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "(800, 10)\n",
-            "(200, 10)\n",
-            "(800, 10)\n",
-            "(200, 10)\n"
+            "(99995, 15)\n",
+            "(99995, 7)\n",
+            "(5, 15)\n",
+            "(5, 7)\n",
+            "Bin edges  [-774.11892764 -191.0953275  -101.40239604  -31.74501316   32.49907102\n",
+            "  102.3074637   192.62118585  751.76878099]\n"
           ],
           "name": "stdout"
         }
@@ -118,20 +141,21 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iRop4hB8JZeZ",
-        "outputId": "b7a03375-ecf9-4f2a-fce4-424256a09e65"
+        "outputId": "3d1bd62f-1350-4fea-8682-abe088e9dff9"
       },
       "source": [
         "model = tf.keras.models.Sequential([\r\n",
-        "  tf.keras.layers.InputLayer(input_shape=(10,)),\r\n",
+        "  tf.keras.layers.InputLayer(input_shape=(INPUT_SIZE,)),\r\n",
         "  tf.keras.layers.Dense(30, activation=\"relu\"),\r\n",
-        "  tf.keras.layers.Dense(10, activation=\"linear\"),\r\n",
+        "  tf.keras.layers.Dense(N_BINS, activation=\"softmax\"),\r\n",
         "])\r\n",
         "model.compile(\r\n",
+        "    optimizer=tf.keras.optimizers.Adam(learning_rate=0.0001),\r\n",
         "    loss=tf.keras.losses.CategoricalCrossentropy(),\r\n",
         ")\r\n",
         "model.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,16 +164,129 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "dense (Dense)                (None, 30)                330       \n",
+            "dense (Dense)                (None, 30)                480       \n",
             "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 10)                310       \n",
+            "dense_1 (Dense)              (None, 7)                 217       \n",
             "=================================================================\n",
-            "Total params: 640\n",
-            "Trainable params: 640\n",
+            "Total params: 697\n",
+            "Trainable params: 697\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BdY75LO3Qebf",
+        "outputId": "63341ced-4f91-411d-ead0-7706d967da11"
+      },
+      "source": [
+        "model.fit(\r\n",
+        "    x=X_train,\r\n",
+        "    y=y_train,\r\n",
+        "    epochs=10,\r\n",
+        "    batch_size=32,\r\n",
+        ")"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/10\n",
+            "3125/3125 [==============================] - 4s 1ms/step - loss: 1.9132\n",
+            "Epoch 2/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 1.3084\n",
+            "Epoch 3/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.9831\n",
+            "Epoch 4/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.7800\n",
+            "Epoch 5/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.6337\n",
+            "Epoch 6/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.5211\n",
+            "Epoch 7/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.4366\n",
+            "Epoch 8/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.3726\n",
+            "Epoch 9/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.3233\n",
+            "Epoch 10/10\n",
+            "3125/3125 [==============================] - 3s 1ms/step - loss: 0.2864\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tensorflow.python.keras.callbacks.History at 0x7fa2e28536a0>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zDGWYfkpS5fo",
+        "outputId": "ad568f29-a85e-490d-9e30-c75307e5f901"
+      },
+      "source": [
+        "predictions = model.predict(X_test)\r\n",
+        "print(predictions.shape)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(5, 7)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 337
+        },
+        "id": "In0m1_wZZ3mc",
+        "outputId": "f4a156b5-bb6d-4da3-fa8e-14bc7c3814a1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NotImplementedError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-11-0342e2540893>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mdist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mdist\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow_probability/python/distributions/distribution.py\u001b[0m in \u001b[0;36mmean\u001b[0;34m(self, name, **kwargs)\u001b[0m\n\u001b[1;32m   1235\u001b[0m     \u001b[0;34m\"\"\"Mean.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1236\u001b[0m     \u001b[0;32mwith\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_name_and_control_scope\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1237\u001b[0;31m       \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_mean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1238\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1239\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_quantile\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/tensorflow_probability/python/distributions/distribution.py\u001b[0m in \u001b[0;36m_mean\u001b[0;34m(self, **kwargs)\u001b[0m\n\u001b[1;32m   1230\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0m_mean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1231\u001b[0m     raise NotImplementedError('mean is not implemented: {}'.format(\n\u001b[0;32m-> 1232\u001b[0;31m         type(self).__name__))\n\u001b[0m\u001b[1;32m   1233\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1234\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'mean'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNotImplementedError\u001b[0m: mean is not implemented: Categorical"
+          ]
         }
       ]
     }
